# ConvexHull

./: CMakeLists.txt  ConvexHull.cpp  ConvexHull.h  ConvexHullTest.cpp  HullAlgorithm.h  Incremental.cpp  Incremental.h  README.md
Cmake_version/: ConvexHull.h  ConvexHullTest.cpp  HullAlgorithm.cpp  Incremental.cpp
QtCreator_Copy/: ConvexHull.cpp  ConvexHull.h  ConvexHull.pro  HullAlgorithm.cpp  HullAlgorithm.h  Incremental.cpp  Incremental.h  main.cpp  meshtype.h
